<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.gaalop</groupId>
    <artifactId>gaalop</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>Gaalop</name>

    <!--
         The submodules of this application.
     -->
    <modules>
        <module>api</module>

	<!-- front end -->
        <module>clucalc</module>
        
        <module>globalSettings</module>

        <module>visualCodeInserter</module>
        <module>visualCodeInserter2d</module>
        <module>ganjaVisualCodeInserter</module>

        <!-- algebra -->
        <module>algebra</module>

	<!-- middle end -->
        <module>tba</module>
        <module>gapp</module>

	<!-- back end -->
        <module>codegen-cpp</module>
	<module>codegen-csharp</module>
	
        <module>codegen-java</module>
        <module>codegen-dot</module>
        <module>codegen-gapp</module>
        <module>codegen-gappopencl</module>
        <module>codegen-compressed</module>
        <module>codegen-verilog</module>
        <module>codegen-latex</module>
        <module>codegen-visualizer</module>
	<module>codegen-rust</module>
	<module>codegen-mathematica</module>
	<module>codegen-julia</module>
        <module>gaalet</module>
        <module>codegen-vis2d</module>
        <module>gappDebugger</module>
        <module>codegen-ganja</module>
        <module>codegen-matlab</module>
        <module>codegen-python</module>
        <module>codegen-jsonexport</module>
        
	<!-- interface -->
        <module>starter</module>
        <module>cli</module>
        <module>gui</module>

        <!-- testbenches -->
        <module>testbenchTbaGapp</module>

        <!-- distribution -->
        <module>distribution</module>
    </modules>

    <!--
             All submodules should be built for the Java 6 platform.
     -->
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.3.0</version>
<!--		            <inherited>true</inherited>-->
<!--                    <configuration>-->
<!--                        <descriptors>-->
<!--                            <descriptor>src/assemble/dist.xml</descriptor>-->
<!--                        </descriptors>-->
<!--                    </configuration>-->
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <!--
          The unit testing dependency for all sub projects.
      -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <!--
          The logging subsystem used by all subprojects.
      -->
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>
        
    </dependencies>


<!--    <repositories>-->
<!--        <repository>-->
<!--            <id>ccnexus</id>-->
<!--            <name>Code-Camp 3rd Party Repository</name>-->
<!--            <url>http://nexus.code-camp.org/content/repositories/thirdparty/</url>-->
<!--        </repository>-->
<!--    </repositories>-->
    
    <properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
